--- a/band.html
+++ b/band.html
@@ -193,17 +193,17 @@
                     
                     <div class="info-item">
                         <span class="info-label">동아리방 위치:</span>
-                        <span>예술관 지하 합주실</span>
+                        <span>본관844호</span>
                     </div>
 
                     <div class="info-item">
                         <span class="info-label">활동 내용:</span>
-                        <span>정기 공연 및 교내 축제 참여</span>
+                        <span>정기 공연 및 교내 축제 참여와 합주연습</span>
                     </div>
 
                     <div class="info-item">
                         <span class="info-label">모임 시간:</span>
-                        <span>매주 화, 목, 토 오후 6시</span>
+                        <span>일정 조율 후 맞는 사람들끼리 연습</span>
                     </div>
                 </div>
 
