--- a/boardgame.html
+++ b/boardgame.html
@@ -193,17 +193,17 @@
                     
                     <div class="info-item">
                         <span class="info-label">동아리방 위치:</span>
-                        <span>학생회관 3층 동아리방</span>
+                        <span>본관849호</span>
                     </div>
 
                     <div class="info-item">
                         <span class="info-label">활동 내용:</span>
-                        <span>정기 모임 및 보드게임 대회 개최</span>
+                        <span>정기 모임 및 보드게임 대회 개최 및 자유로운 보드게임 활동</span>
                     </div>
 
                     <div class="info-item">
                         <span class="info-label">모임 시간:</span>
-                        <span>매주 월요일 오후 6시</span>
+                        <span>자유롭게 동아리방에서 활동</span>
                     </div>
                 </div>
 
