--- a/contest.html
+++ b/contest.html
@@ -193,17 +193,17 @@
                     
                     <div class="info-item">
                         <span class="info-label">동아리방 위치:</span>
-                        <span>경영관 4층 세미나실</span>
+                        <span>본관843</span>
                     </div>
 
                     <div class="info-item">
                         <span class="info-label">활동 내용:</span>
-                        <span>공모전 준비 및 스터디</span>
+                        <span>공모전 정보 공유 및 참가 팀 구성, 팀별 기획/제작 활동을 통해 실전 경험을 쌓는 활동</span>
                     </div>
 
                     <div class="info-item">
                         <span class="info-label">모임 시간:</span>
-                        <span>매주 화, 목 오후 7시</span>
+                        <span>공모전 일정 및 팀 상황에 따라 유동적으로 조율</span>
                     </div>
                 </div>
 
