--- a/dance.html
+++ b/dance.html
@@ -20,11 +20,6 @@
         }
 
 
-
-
-
-
-        
         a {
             text-decoration: none;
             color: inherit;
@@ -190,6 +185,7 @@
                 <span>메인페이지로 돌아가기</span>
             </a>
 
+
             <div class="club-detail">
                 <h1 class="club-title">DM</h1>
                 <p class="club-description">다양한 장르의 댄스를 배우고 공연하는 동아리입니다.</p>
@@ -198,18 +194,18 @@
                     <h2>동아리 상세 정보</h2>
                     
                     <div class="info-item">
-                        <span class="info-label">동아리방 위치:</span>
-                        <span>학생회관 2층 댄스실</span>
+                        <span class="info-label">주 연습 장소:</span>
+                        <span>본관 6층웨이트장</span>
                     </div>
 
                     <div class="info-item">
                         <span class="info-label">활동 내용:</span>
-                        <span>정기 공연 및 교내 행사 참여</span>
+                        <span>정기 공연 및 교내 행사 참여 및 찬조 공연 연습</span>
                     </div>
 
                     <div class="info-item">
                         <span class="info-label">모임 시간:</span>
-                        <span>매주 월, 수, 금 오후 7시</span>
+                        <span>일정 조율 후 연습</span>
                     </div>
                 </div>
 
