--- a/fire.html
+++ b/fire.html
@@ -193,17 +193,17 @@
                     
                     <div class="info-item">
                         <span class="info-label">동아리방 위치:</span>
-                        <span>공학관 1층</span>
+                        <span>본관807-2</span>
                     </div>
 
                     <div class="info-item">
                         <span class="info-label">활동 내용:</span>
-                        <span>안전 교육 및 소방 훈련 참여</span>
+                        <span>정기교육 및 학교 교내외 순찰 기타 교외 활동등</span>
                     </div>
 
                     <div class="info-item">
                         <span class="info-label">모임 시간:</span>
-                        <span>매주 금요일 오후 3시</span>
+                        <span>한달에 한번 정기교육 및 주말제외 매일 순찰(대원끼리 돌아가며)</span>
                     </div>
                 </div>
 
