--- a/futsal.html
+++ b/futsal.html
@@ -198,12 +198,12 @@
 
                     <div class="info-item">
                         <span class="info-label">활동 내용:</span>
-                        <span>주 2회 정기 연습 및 타 대학과의 교류전</span>
+                        <span>주 1회 정기 연습 및 타 대학과의 교류전</span>
                     </div>
 
                     <div class="info-item">
                         <span class="info-label">모임 시간:</span>
-                        <span>매주 화요일, 목요일 오후 5시</span>
+                        <span>매주 화요일 이나 목요일 오후 5시</span>
                     </div>
                 </div>
 
