--- a/photo.html
+++ b/photo.html
@@ -193,17 +193,17 @@
                     
                     <div class="info-item">
                         <span class="info-label">동아리방 위치:</span>
-                        <span>미디어관 3층</span>
+                        <span>본관845</span>
                     </div>
 
                     <div class="info-item">
                         <span class="info-label">활동 내용:</span>
-                        <span>사진전 개최 및 교내 행사 기록</span>
+                        <span>학교 행사 촬영 주기적으로 출사</span>
                     </div>
 
                     <div class="info-item">
                         <span class="info-label">모임 시간:</span>
-                        <span>매주 수요일 오후 4시</span>
+                        <span>학교 축제, 주기적으로 올라오는 출사일정 개별 신청후 활동</span>
                     </div>
                 </div>
 
