--- a/volunteer.html
+++ b/volunteer.html
@@ -193,7 +193,7 @@
                     
                     <div class="info-item">
                         <span class="info-label">동아리방 위치:</span>
-                        <span>인문관 2층</span>
+                        <span>본관841</span>
                     </div>
 
                     <div class="info-item">
@@ -202,8 +202,8 @@
                     </div>
 
                     <div class="info-item">
-                        <span class="info-label">모임 시간:</span>
-                        <span>매주 토요일 오전 10시</span>
+                        <span class="info-label">활동 방식:</span>
+                        <span>게시된 봉사 일정에 따라 참여자 모집 후 봉사활동</span>
                     </div>
                 </div>
 
