--- a/futsal.html
+++ b/futsal.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UFC - 청운대학교 풋살동아리</title>
     <style>
-        /* 기본 스타일 리셋 */
         * {
             margin: 0;
             padding: 0;
@@ -70,12 +69,12 @@
             font-weight: normal;
         }
 
-        /* 메인 콘텐츠 스타일 */
+        /* 메인 콘텐츠  */
         main {
             padding: 2rem 0;
         }
 
-        /* 상세 페이지 스타일 */
+        /* 상세  */
         .back-link {
             display: inline-flex;
             align-items: center;
@@ -165,7 +164,7 @@
     </style>
 </head>
 <body>
-    <!-- 헤더 영역 -->
+    <!-- 헤더  -->
     <header>
         <div class="container">
             <div class="logo">
@@ -176,7 +175,7 @@
         </div>
     </header>
 
-    <!-- 메인 콘텐츠 -->
+    <!-- 메인  -->
     <main>
         <div class="container">
             <a href="index.html" class="back-link">
