--- a/volunteer.html
+++ b/volunteer.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>봄날 - 청운대학교 봉사동아리</title>
     <style>
-        /* 기본 스타일 리셋 */
+        
         * {
             margin: 0;
             padding: 0;
@@ -31,7 +31,7 @@
             padding: 0 20px;
         }
 
-        /* 헤더 스타일 */
+        /* 헤더  */
         header {
             background-color: #fff;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -70,12 +70,12 @@
             font-weight: normal;
         }
 
-        /* 메인 콘텐츠 스타일 */
+        /* 메인 콘텐츠  */
         main {
             padding: 2rem 0;
         }
 
-        /* 상세 페이지 스타일 */
+        /* 상세 페이지  */
         .back-link {
             display: inline-flex;
             align-items: center;
